# wgsl-tools

./: Cargo.toml  LICENSE  README.md
crates/playground/: Cargo.toml  index.html
crates/playground/src/: main.rs
crates/wesl/: Cargo.toml
crates/wesl-cond-comp/: Cargo.toml
crates/wesl-cond-comp/src/: lib.rs
crates/wesl-imports/: Cargo.toml
crates/wesl-imports/src/: assemble.rs  lib.rs  mangle.rs  resolve.rs
crates/wesl-macros/: Cargo.toml
crates/wesl-macros/src/: lib.rs
crates/wesl-pkg/: Cargo.toml
crates/wesl-pkg/src/: lib.rs
crates/wesl-test/: Cargo.toml
crates/wesl-test/gpt-tests/: built-in-functions.json  declaration-and-scope.json  gpt.json  keword-and-token-summary.json
crates/wesl-test/gpt-tests/old/: attributes.json  directives.json  entry-points.json  execution.json  expressions.json  functions.json  memory.json  statements.json  textual-structure.json  types.json  variable-and-value-declarations.json
crates/wesl-test/shaders/circular_import/: main.wgsl  mod1.wgsl  mod2.wgsl
crates/wesl-test/spec-tests/: lit-type-inference.json
crates/wesl-test/src/: lib.rs
crates/wesl-test/webgpu-samples/: README.md
crates/wesl-test/wesl-testsuite/: ctsParseTests.json  fetch.sh  importCases.json  importSyntaxCases.json
crates/wesl/src/: attributes.rs  condcomp.rs  error.rs  import.rs  lib.rs  lower.rs  mangle.rs  overload.rs  package.rs  resolve.rs  sourcemap.rs  strip.rs  syntax_util.rs  visit.rs
crates/wesl/src/consteval/: builtin.rs  conv.rs  display.rs  error.rs  eval.rs  exec.rs  instance.rs  mod.rs  ops.rs  prelude.wgsl  ty.rs
crates/wesl/src/eval/: attrs.rs  builtin.rs  constant.rs  conv.rs  display.rs  error.rs  eval.rs  exec.rs  instance.rs  lower.rs  mem.rs  mod.rs  ops.rs  ops_std.rs  prelude.wgsl  to_expr.rs  ty.rs
crates/wesl/src/generics/: mangle.rs  mod.rs
crates/wesl/src/import/: assemble.rs  mangle.rs  mod.rs  module.rs
crates/wesl/src/validate/: mod.rs
crates/weslc/: Cargo.toml
crates/weslc/src/: lib.rs  mangle.rs  resolve.rs  strip.rs  syntax_util.rs
crates/weslc/src/condcomp/: mod.rs
crates/weslc/src/import/: mod.rs  module.rs
crates/weslc/src/imports/: assemble.rs  mangle.rs  mod.rs  module.rs  resolve.rs
crates/wgsl-imports/: Cargo.toml
crates/wgsl-imports/src/: assemble.rs  lib.rs  mangle.rs  resolve.rs
crates/wgsl-parse/: Cargo.toml
crates/wgsl-parse-macros/: Cargo.toml
crates/wgsl-parse-macros/src/: lib.rs
crates/wgsl-parse/src/: error.rs  lexer.rs  lib.rs  mod.rs  parser.rs  parser_support.rs  parser_support_spanned.rs  print.rs  span.rs  syntax.rs  syntax_display.rs  syntax_display_spanned.rs  syntax_ext.rs  syntax_impl.rs  syntax_spanned.rs  visit.rs  wgsl.lalrpop  wgsl_recognize.lalrpop  wgsl_spanned.lalrpop
crates/wgsl-test/: Cargo.toml
crates/wgsl-test/src/: lib.rs
examples/wesl-consumer/: Cargo.toml  README.md  build.rs
examples/wesl-consumer/src/: main.rs
examples/wesl-consumer/src/shaders/: main.wesl  main.wgsl  util.wesl
examples/wesl-random/: Cargo.toml  build.rs
examples/wesl-random/src/: lib.rs
examples/wesl-random/src/shaders/: random.wesl  random.wgsl
samples/: imp1.wgsl  imp2.wgsl  main.wgsl  test.wgsl  test3.wgsl
src/: lib.rs  main.rs  test2.wgsl
src/imports/: assemble.rs  mod.rs  parse.rs  resolve.rs
src/parse/: ast.rs  ast_impl.rs  lexer.rs  mod.rs  parser_support.rs  print.rs  span.rs  wgsl_recognize.lalrpop  wgsl_spanned.lalrpop
src/parser/: ast.rs  ast_impl.rs  lexer.rs  mod.rs  parser_support.rs  print.rs  wgsl.lalrpop  wgsl_recognize.lalrpop  wgsl_spanned.lalrpop
