[workspace]
members = ["crates/wgsl-parse", "crates/wgsl-parse-macros", "crates/wesl", "crates/wesl-test", "crates/wesl-pkg", "examples/wesl-random", "examples/wesl-consumer"]

[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["Mathis Brossier <mathis.brossier@gmail.com>"]
repository = "https://github.com/k2d222/wgsl-tools"
license = "MIT"

[package]
name = "wgsl-tools"
description = "Various tools to parse, verify, evaluate and modify wgsl shader source."
documentation = "https://docs.rs/wgsl-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
wgsl-parse = { path = "crates/wgsl-parse" }
wesl = { path = "crates/wesl" }
wesl-pkg = { path = "crates/wesl-pkg" }
thiserror = "1.0.63"
naga = { version = "23.0.0", optional = true, features = ["wgsl-in"] }

[[bin]]
name = "wesl"
path = "src/main.rs"

[features]
default = ["naga"]
