[package]
name = "playground"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wesl = { path = "../wesl" }
itertools = "0.13.0"
console_log = "1.0.0"
log = "0.4.22"
web-sys = "0.3.70"
ansi-to-html = "0.2.1"
