[package]
name = "wesl-imports"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
itertools = "0.13.0"
ropey = "1.6.1"
thiserror = "1.0.63"
wgsl-parse = { path = "../wgsl-parse", default-features = false, features = ["imports"] }
wgsl-parse-macros = { path = "../wgsl-parse-macros" }
