[package]
name = "wgsl-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wgsl-parse = { workspace = true }
wesl = { workspace = true }
