[package]
name = "wesl"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
itertools = "0.13.0"
thiserror = "1.0.63"
wgsl-parse = { path = "../wgsl-parse", features = ["imports", "condcomp"] }
wgsl-parse-macros = { version = "0.0.2", path = "../wgsl-parse-macros" }

[features]
default = ["imports", "condcomp"]
imports = ["wgsl-parse/imports"]
condcomp = ["wgsl-parse/condcomp"]
