[package]
name = "wesl"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
annotate-snippets = "0.11.4"
derive_more = { version = "1.0.0", features = ["as_ref", "deref", "deref_mut", "display", "from", "unwrap"] }
half = { version = "2.4.1", features = ["num-traits"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
num-traits = "0.2.19"
sourcemap = "9.0.0"
thiserror = "1.0.63"
wgsl-parse = { path = "../wgsl-parse", features = ["imports", "condcomp"] }
wgsl-parse-macros = { version = "0.0.2", path = "../wgsl-parse-macros" }

[features]
default = ["imports", "condcomp", "eval"]
imports = ["wgsl-parse/imports"]
attributes = ["wgsl-parse/attributes"]
condcomp = ["attributes", "wgsl-parse/condcomp"]
eval = []
