[package]
name = "wgsl-parse"
description = "Parse a wgsl source file to a syntax tree"
documentation = "https://docs.rs/wgsl-parse"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
annotate-snippets = "0.11.4"
derive_more = { version = "1.0.0", features = ["from"] }
itertools = "0.13.0"
lalrpop-util = "0.20.2"
lexical = { version = "6.1.1", features = ["format", "power-of-two"] }
logos = "0.14.1"
thiserror = "1.0.63"
wgsl-parse-macros = { path = "../wgsl-parse-macros" }

[build-dependencies]
# lalrpop = { version = "0.20.2", default-features = false }
lalrpop = { git = "https://github.com/k2d222/lalrpop.git", branch = "more-cfg-attributes" }

[features]
default = ["imports", "condcomp"]
imports = []
condcomp = []
