[package]
name = "wgsl-parse"
description = "Parse a wgsl source file to a syntax tree"
documentation = "https://docs.rs/wgsl-parse"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
annotate-snippets = "0.11.4"
derive_more = { version = "1.0.0", features = ["as_ref", "constructor", "deref", "deref_mut", "from", "is_variant", "try_unwrap", "unwrap"] }
itertools = "0.13.0"
lalrpop-util = "0.20.2"
lazy_static = "1.5.0"
lexical = { version = "6.1.1", features = ["format", "power-of-two"] }
logos = "0.14.1"
serde = { version = "1.0.215", optional = true, features = ["derive", "rc"] }
thiserror = "1.0.63"

[build-dependencies]
# we are waiting for https://github.com/lalrpop/lalrpop/pull/959 to be released on crates.io.
# lalrpop = { version = "0.22.0", default-features = false }
lalrpop = { git = "https://github.com/lalrpop/lalrpop.git", branch = "master" }

[features]
default = ["serde", "imports", "condcomp", "generics"]

# allow attributes on most declarations and statements.
# reference: https://github.com/wgsl-tooling-wg/wesl-spec/blob/main/ConditionalTranslation.md#appendix-updated-grammar
attributes = []

# # allow templates on function declarations
# # reference: none yet
# templates = []

# reference: none yet
generics = ["attributes"]

# conditional translation attribute (@if).
# reference: https://github.com/wgsl-tooling-wg/wesl-spec/blob/main/ConditionalTranslation.md
condcomp = ["attributes"]

# import declarations.
# reference: https://github.com/wgsl-tooling-wg/wesl-spec/blob/main/Imports.md#reference-level-explanation
imports = []

