[package]
name = "wesl-consumer"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
wesl-random = { path = "../wesl-random" }
wesl = { path = "../../crates/wesl" }

[build-dependencies]
wesl-random = { path = "../wesl-random" }
wesl = { path = "../../crates/wesl" }

[features]
# use WESL at build-time (in build.rs) instead of run-time (in main.rs)
build-time = []
